# lola

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
lola/: apps.txt  lola.py  makefile.py  runfile.py
lola/scripts/: audacious.sh  brave-browser.sh  brave-nightly.sh  cheese.sh  chrome.sh  chromium.sh  clang.sh  codeblocks.sh  da-vinci-resolve.sh  dconf.sh  discord.sh  htop.sh  intellij-community.sh  java-development-kit-11.sh  jedit.sh  kate.sh  lazarus-pascal.sh  libreoffice-full.sh  pinta.sh  pycharm-community.sh  python3.sh  scribus.sh  stellarium.sh  sublimetext.sh  vim.sh  vscode.sh
lolacli/: apps.txt  install.sh  lolacli.py
lolacli/scripts/: anaconda.sh  atom-editor.sh  audacity.sh  blender.sh  brave-beta.sh  calibre.sh  cheese.sh  chromium.sh  dos-box.sh  dropbox.sh  emacs.sh  etcher.sh  evolution.sh  firefox.sh  g-drive.sh  g-earth.sh  gcc.sh  geany.sh  gimp.sh  golang.sh  gparted.sh  java-development-kit-14-oracle.sh  kdenlive.sh  lutris.sh  miniconda.sh  mypaint.sh  nodejs.sh  obs.sh  plank-dock.sh  rstudio.sh  signal.sh  simple-screen-recorder.sh  skype.sh  steam.sh  telegram.sh  thonny.sh  virtualbox.sh  vlc.sh  wine.sh  zoom.sh
scripts/: anaconda.sh  atom-editor.sh  audacious.sh  audacity.sh  blender.sh  chromium.sh  clang.sh  codeblocks.sh  crystal.sh  dconf.sh  desmume.sh  discord.sh  edge-beta.sh  emacs.sh  evolution.sh  firefox-dev.sh  fish-sh.sh  g++.sh  gedit.sh  geogebra.sh  java-development-kit-14-oracle.sh  kazam.sh  krita.sh  minecraft.sh  nim.sh  powershell.sh  r-lang.sh  sass.sh  shotwell.sh  spotify.sh  spyder.sh  sublimetext4.sh  terminator.sh  thunderbird.sh  tuxpaint.sh  v-lang.sh  vscode.sh  zsh-sh.sh
tests/: test_lola.py
