[tool.poetry]
name = "lolacli"
version = "0.2.0"
description = "A simple cli tool to help beginners install apps in Linux"
authors = ["Arghya Sarkar <arghyasarkar.joker@gmail.com>"]
license="MIT"
readme="README.md"
homepage= "https://github.com/arghyagod-coder/lola"
repository = "https://github.com/arghyagod-coder/lola"
keywords = ["lola","lola-installer","easy-installer","lola-linux", "lola-app","lola-cli"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
lola = "lolacli.lolacli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
